refactore(filter): use a filter ID
